// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 2 All Components/Advertising Container Failed To Load Example 1`] = `
<div
  style={
    Object {
      "margin": "20px",
      "width": "600px",
    }
  }
>
  <div
    className="sc-bdVaJa kVwYCR advertising_container"
  >
    <p
      className="sc-bwzfXH kWPugd"
    >
      Advertisement
    </p>
    <p>
      Advertisement failed to load
    </p>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/Advertising Container Mpu Example 1`] = `
<div
  style={
    Object {
      "height": "270px",
      "margin": "20px",
      "width": "320px",
    }
  }
>
  <div
    className="sc-bdVaJa kVwYCR advertising_container"
  >
    <p
      className="sc-bwzfXH kWPugd"
    >
      Advertisement
    </p>
    <div
      style={
        Object {
          "background": "grey",
          "height": "250px",
          "width": "300px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots 2 All Components/Advertising Container Native Example 1`] = `
<div
  style={
    Object {
      "margin": "20px",
      "width": "600px",
    }
  }
>
  <h4
    style={
      Object {
        "marginBottom": "10px",
      }
    }
  >
    Promoted links from around the web
  </h4>
  <div
    className="sc-bdVaJa kVwYCR advertising_container"
  >
    <div
      style={
        Object {
          "background": "grey",
          "height": "400px",
          "width": "580px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots 2 All Components/Article Keywords Normal 1`] = `
<div
  className="sc-htpNat dVmOzA"
>
  <a
    className="sc-bxivhb GDko"
    href="#1"
    title="Show all Covid-19 articles"
  >
    Covid-19
  </a>
  <a
    className="sc-bxivhb GDko"
    href="#2"
    title="Show all BFI National Archive articles"
  >
    BFI National Archive
  </a>
  <a
    className="sc-bxivhb GDko"
    href="#3"
    title="Show all Video articles"
  >
    Video
  </a>
</div>
`;

exports[`Storyshots 2 All Components/Blockquote With Citation 1`] = `
<blockquote
  className="sc-ifAKCX eyPYQu"
>
  <q
    className="sc-EHOje cLAAzw"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
  <cite
    className="sc-bZQynM duZfSN"
  >
    Ian Malcolm
  </cite>
</blockquote>
`;

exports[`Storyshots 2 All Components/Blockquote Without Citation 1`] = `
<blockquote
  className="sc-ifAKCX eyPYQu"
>
  <q
    className="sc-EHOje cLAAzw"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
</blockquote>
`;

exports[`Storyshots 2 All Components/Breadcrumbs Normal 1`] = `
Array [
  <ol
    className="sc-gzVnrw gCTEXN"
  >
    <li
      className="sc-dnqmqq ksyAmQ"
    >
      <a
        className="sc-iwsKbI jUiLjq"
        href="#1"
        target="_self"
      >
        Industry
      </a>
    </li>
    <li
      className="sc-dnqmqq ksyAmQ"
    >
      <a
        className="sc-iwsKbI jUiLjq"
        href="#2"
        target="_self"
      >
        Get funding
      </a>
    </li>
    <li
      className="sc-dnqmqq ksyAmQ"
    >
      Find a fund to create films, TV or new formats of storytelling
    </li>
  </ol>,
  <div
    className="sc-htoDjs ivtyUq"
  >
    <li
      className="sc-dnqmqq ksyAmQ"
    >
      <a
        className="sc-iwsKbI jUiLjq"
        href="#2"
        target="_self"
      >
        &lt; Go back to 
        Get funding
      </a>
    </li>
  </div>,
]
`;

exports[`Storyshots 2 All Components/Breadcrumbs Wrapping 1`] = `
Array [
  <ol
    className="sc-gzVnrw gCTEXN"
  >
    <li
      className="sc-dnqmqq ksyAmQ"
    >
      <a
        className="sc-iwsKbI jUiLjq"
        href="#4"
        target="_self"
      >
        Industry
      </a>
    </li>
    <li
      className="sc-dnqmqq ksyAmQ"
    >
      <a
        className="sc-iwsKbI jUiLjq"
        href="#5"
        target="_self"
      >
        Get funding
      </a>
    </li>
    <li
      className="sc-dnqmqq ksyAmQ"
    >
      <a
        className="sc-iwsKbI jUiLjq"
        href="#6"
        target="_self"
      >
        Find a fund to create films, TV or new formats of storytelling
      </a>
    </li>
    <li
      className="sc-dnqmqq ksyAmQ"
    >
      Development Fund
    </li>
  </ol>,
  <div
    className="sc-htoDjs ivtyUq"
  >
    <li
      className="sc-dnqmqq ksyAmQ"
    >
      <a
        className="sc-iwsKbI jUiLjq"
        href="#6"
        target="_self"
      >
        &lt; Go back to 
        Find a fund to create films, TV or new formats of storytelling
      </a>
    </li>
  </div>,
]
`;

exports[`Storyshots 2 All Components/Button Primary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <a
    className="sc-gZMcBi ikvtgj"
    colorScheme={0}
    href="#1"
    target="_self"
    title={false}
  >
    Click me
  </a>
</div>
`;

exports[`Storyshots 2 All Components/Button Secondary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <a
    className="sc-VigVT dNkdxS"
    colorScheme={0}
    href="#2"
    target="_self"
    title={false}
  >
    Click me
  </a>
</div>
`;

exports[`Storyshots 2 All Components/Button Tertiary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <a
    className="sc-jTzLTM buzsPQ"
    colorScheme={0}
    href="#3"
    target="_self"
    title={false}
  >
    Click me
  </a>
</div>
`;

exports[`Storyshots 2 All Components/Call to Action External Link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-fjdhpX josSNq call_to_action_block"
  >
    <a
      className="sc-gZMcBi ikvtgj external_link"
      colorScheme={0}
      href="https://google.com"
      rel="noreferrer"
      target="_blank"
      title={false}
    >
      External Link
    </a>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/Call to Action Internal Link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-fjdhpX josSNq call_to_action_block"
  >
    <a
      className="sc-gZMcBi ikvtgj"
      colorScheme={0}
      href="/"
      rel=""
      target="_self"
      title={false}
    >
      Internal Link
    </a>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/Call to Action Two Links 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-fjdhpX josSNq call_to_action_block"
  >
    <a
      className="sc-gZMcBi ikvtgj"
      colorScheme={0}
      href="/"
      rel=""
      target="_self"
      title={false}
    >
      Internal Link
    </a>
  </div>
  <div
    className="sc-fjdhpX josSNq call_to_action_block"
  >
    <a
      className="sc-gZMcBi ikvtgj external_link"
      colorScheme={0}
      href="https://google.com"
      rel="noreferrer"
      target="_blank"
      title={false}
    >
      External Link
    </a>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/Divider Normal 1`] = `
<hr
  className="sc-jzJRlG eYNkah"
/>
`;

exports[`Storyshots 2 All Components/Downloadable File Multiple Files 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-dxgOiQ daoCbE"
  >
    <div
      className="sc-cSHVUG crNoaq"
    >
      <a
        className="sc-kAzzGY khSqpd"
        download={true}
        href="https://www.bfi.org.uk/sites/bfi.org.uk/files/downloads/bfi-young-audiences-content-fund-production-application-guidelines-2019-10.pdf"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          height="40"
          viewBox="0 0 30 40"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="#783DF6"
              fillRule="nonzero"
              transform="translate(-80 -1189)"
            >
              <g
                transform="translate(80 1189)"
              >
                <g>
                  <path
                    d="M16.875 18.443a.937.937 0 00-.938-.938h-1.874a.937.937 0 00-.938.938v6.563H9.306c-.836 0-1.254 1.014-.66 1.603l5.65 5.607a1 1 0 001.408 0l5.65-5.607c.593-.589.176-1.603-.661-1.603h-3.818v-6.563zM28.893 7.655l-6.554-6.553A3.75 3.75 0 0019.691 0H3.75A3.762 3.762 0 000 3.757v32.494A3.75 3.75 0 003.75 40h22.495C28.315 40 30 38.32 30 36.25V10.31c0-.991-.404-1.952-1.107-2.655zm-8.897-3.593l5.945 5.943h-5.945V4.062zM26.25 36.25H3.75V3.757h12.497v8.123a1.87 1.87 0 001.875 1.875h8.128V36.25z"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <div
          className="sc-chPdSV lfQhzU file-details"
        >
          <span
            className="sc-kgoBCf dLjfnM file-title"
          >
            File title
          </span>
          <span
            className="sc-kGXeez cftvVV"
          >
            PDF
          </span>
          <span
            className="sc-kpOJdX bsGaYk"
          >
            1.2 MB
          </span>
        </div>
      </a>
    </div>
    <div
      className="sc-cSHVUG crNoaq"
    >
      <a
        className="sc-kAzzGY khSqpd"
        download={true}
        href="https://www.bfi.org.uk/sites/bfi.org.uk/files/downloads/bfi-young-audiences-content-fund-production-application-guidelines-2019-10.pdf"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          height="40"
          viewBox="0 0 30 40"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="#783DF6"
              fillRule="nonzero"
              transform="translate(-80 -1189)"
            >
              <g
                transform="translate(80 1189)"
              >
                <g>
                  <path
                    d="M16.875 18.443a.937.937 0 00-.938-.938h-1.874a.937.937 0 00-.938.938v6.563H9.306c-.836 0-1.254 1.014-.66 1.603l5.65 5.607a1 1 0 001.408 0l5.65-5.607c.593-.589.176-1.603-.661-1.603h-3.818v-6.563zM28.893 7.655l-6.554-6.553A3.75 3.75 0 0019.691 0H3.75A3.762 3.762 0 000 3.757v32.494A3.75 3.75 0 003.75 40h22.495C28.315 40 30 38.32 30 36.25V10.31c0-.991-.404-1.952-1.107-2.655zm-8.897-3.593l5.945 5.943h-5.945V4.062zM26.25 36.25H3.75V3.757h12.497v8.123a1.87 1.87 0 001.875 1.875h8.128V36.25z"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <div
          className="sc-chPdSV lfQhzU file-details"
        >
          <span
            className="sc-kgoBCf dLjfnM file-title"
          >
            Young Audiences Content Fund production application guidelines
          </span>
          <span
            className="sc-kGXeez cftvVV"
          >
            PDF
          </span>
          <span
            className="sc-kpOJdX bsGaYk"
          >
            279.06 KB
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/Downloadable File Single File 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-dxgOiQ daoCbE"
  >
    <div
      className="sc-cSHVUG crNoaq"
    >
      <a
        className="sc-kAzzGY khSqpd"
        download={true}
        href="https://www.bfi.org.uk/sites/bfi.org.uk/files/downloads/bfi-young-audiences-content-fund-production-application-guidelines-2019-10.pdf"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          height="40"
          viewBox="0 0 30 40"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="#783DF6"
              fillRule="nonzero"
              transform="translate(-80 -1189)"
            >
              <g
                transform="translate(80 1189)"
              >
                <g>
                  <path
                    d="M16.875 18.443a.937.937 0 00-.938-.938h-1.874a.937.937 0 00-.938.938v6.563H9.306c-.836 0-1.254 1.014-.66 1.603l5.65 5.607a1 1 0 001.408 0l5.65-5.607c.593-.589.176-1.603-.661-1.603h-3.818v-6.563zM28.893 7.655l-6.554-6.553A3.75 3.75 0 0019.691 0H3.75A3.762 3.762 0 000 3.757v32.494A3.75 3.75 0 003.75 40h22.495C28.315 40 30 38.32 30 36.25V10.31c0-.991-.404-1.952-1.107-2.655zm-8.897-3.593l5.945 5.943h-5.945V4.062zM26.25 36.25H3.75V3.757h12.497v8.123a1.87 1.87 0 001.875 1.875h8.128V36.25z"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <div
          className="sc-chPdSV lfQhzU file-details"
        >
          <span
            className="sc-kgoBCf dLjfnM file-title"
          >
            File title
          </span>
          <span
            className="sc-kGXeez cftvVV"
          >
            PDF
          </span>
          <span
            className="sc-kpOJdX bsGaYk"
          >
            1.2 MB
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/ErrorPage Error 404 1`] = `
Array [
  <div
    className="sc-ckVGcZ bQICAJ"
  />,
  <div
    className="sc-jKJlTe cFrwU"
  >
    <div
      className="sc-iAyFgw cwjdBz"
    >
      <h1
        className="sc-eNQAEJ gLXqMP"
      >
        <span
          className="sc-hMqMXs hKPCBo"
        >
          404
        </span>
        <span
          className="sc-kEYyzF cXUhpx"
        >
          Page not found
        </span>
      </h1>
      <div
        className="sc-kkGfuU kUNnRZ"
      >
        <p>
          Sorry, something went wrong and we cannot find the page you are looking for.
        </p>
        <p>
          You can try going back or find what you are looking for on another page.
        </p>
      </div>
      <div
        className="sc-eHgmQL jgBeHL"
      >
        <a
          className="sc-gZMcBi ikvtgj"
          colorScheme={0}
          href="/"
          target="_self"
          title={false}
        >
          Return to home
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots 2 All Components/ErrorPage Error 500 1`] = `
Array [
  <div
    className="sc-ckVGcZ bQICAJ"
  />,
  <div
    className="sc-jKJlTe cFrwU"
  >
    <div
      className="sc-iAyFgw cwjdBz"
    >
      <h1
        className="sc-eNQAEJ gLXqMP"
      >
        <span
          className="sc-hMqMXs hKPCBo"
        >
          500
        </span>
        <span
          className="sc-kEYyzF cXUhpx"
        >
          Internal Server Error
        </span>
      </h1>
      <div
        className="sc-kkGfuU kUNnRZ"
      >
        <p>
          Sorry, this page doesn't seem to be working.
        </p>
        <p>
          Try to refresh the page, or go back to home.
        </p>
      </div>
      <div
        className="sc-eHgmQL jgBeHL"
      >
        <a
          className="sc-gZMcBi ikvtgj"
          colorScheme={0}
          href="/"
          target="_self"
          title={false}
        >
          Return to home
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots 2 All Components/Feedback Form Example 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-cvbbAY jPGGjU"
  >
    <button
      className="sc-jWBwVP eFulLK"
      onClick={[Function]}
      title="Give us some feedback"
    >
      <strong>
        Is something missing from this page?
      </strong>
       Your feedback helps us.
    </button>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/Feedback Form Helpscout Example 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-iRbamj jQWoYR"
  >
    <button
      className="sc-jlyJG fCXEic"
      onClick={[Function]}
      title="Give us some feedback"
    >
      <strong>
        Is something missing from this page?
      </strong>
       Your feedback helps us.
    </button>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/FilmShowing A Showing 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-kjoXOD bsTIhq"
  >
    <h4
      className="sc-caSCKo cBnArw h4"
    >
      La La Land
    </h4>
    <p
      className="sc-cHGsZl gBsYkR"
    >
      24th February
    </p>
    <ul
      className="sc-TOsTZ thZdb"
    >
      <li
        className="sc-kgAjT fAezwI"
      >
        <a
          className="sc-VigVT dNkdxS"
          colorScheme={0}
          href="#"
          target="_self"
          time="3:30pm"
          title="Book this at BFI Southbank"
        >
          3:30pm
        </a>
      </li>
      <li
        className="sc-kgAjT fAezwI"
      >
        <a
          className="sc-VigVT dNkdxS"
          colorScheme={0}
          href="#"
          target="_self"
          time="6:30pm"
          title="Book this at BFI Southbank"
        >
          6:30pm
        </a>
      </li>
      <li
        className="sc-kgAjT fAezwI"
      >
        <span
          className="sc-cJSrbW DqKqv"
        >
          8:45pm
           - Sold out
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/FilmShowing Sold Out 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-kjoXOD bsTIhq"
  >
    <h4
      className="sc-caSCKo cBnArw h4"
    >
      La La Land
    </h4>
    <p
      className="sc-cHGsZl gBsYkR"
    >
      24th February
    </p>
    <ul
      className="sc-TOsTZ thZdb"
    >
      <li
        className="sc-kgAjT fAezwI"
      >
        <span
          className="sc-cJSrbW DqKqv"
        >
           - Sold out
        </span>
      </li>
      <li
        className="sc-kgAjT fAezwI"
      >
        <span
          className="sc-cJSrbW DqKqv"
        >
           - Sold out
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/FilmShowingGrid Example 1`] = `
<section
  className="sc-ksYbfQ idWHsL"
>
  <div
    className="sc-kjoXOD bsTIhq"
  >
    <p
      className="sc-cHGsZl gBsYkR"
    >
      24th February
    </p>
    <ul
      className="sc-TOsTZ thZdb"
    >
      <li
        className="sc-kgAjT fAezwI"
      >
        <a
          className="sc-VigVT dNkdxS"
          colorScheme={0}
          href="#"
          id="10101"
          target="_self"
          time="3:30pm"
          title="Book this at BFI Southbank"
        >
          3:30pm
        </a>
      </li>
      <li
        className="sc-kgAjT fAezwI"
      >
        <a
          className="sc-VigVT dNkdxS"
          colorScheme={0}
          href="#"
          id="202020"
          target="_self"
          time="6:30pm"
          title="Book this at BFI Southbank"
        >
          6:30pm
        </a>
      </li>
      <li
        className="sc-kgAjT fAezwI"
      >
        <span
          className="sc-cJSrbW DqKqv"
        >
          8:45pm
           - Sold out
        </span>
      </li>
    </ul>
  </div>
  <div
    className="sc-kjoXOD bsTIhq"
  >
    <p
      className="sc-cHGsZl gBsYkR"
    >
      24th February
    </p>
    <ul
      className="sc-TOsTZ thZdb"
    >
      <li
        className="sc-kgAjT fAezwI"
      >
        <span
          className="sc-cJSrbW DqKqv"
        >
          3:30pm
           - Sold out
        </span>
      </li>
      <li
        className="sc-kgAjT fAezwI"
      >
        <a
          className="sc-VigVT dNkdxS"
          colorScheme={0}
          href="#"
          id="5050505"
          target="_self"
          time="6:30pm"
          title="Book this at BFI Southbank"
        >
          6:30pm
        </a>
      </li>
    </ul>
  </div>
  <div
    className="sc-kjoXOD bsTIhq"
  >
    <p
      className="sc-cHGsZl gBsYkR"
    >
      24th February
    </p>
    <ul
      className="sc-TOsTZ thZdb"
    >
      <li
        className="sc-kgAjT fAezwI"
      >
        <span
          className="sc-cJSrbW DqKqv"
        >
          3:30pm
           - Sold out
        </span>
      </li>
      <li
        className="sc-kgAjT fAezwI"
      >
        <a
          className="sc-VigVT dNkdxS"
          colorScheme={0}
          href="#"
          id="70707"
          target="_self"
          time="6:30pm"
          title="Book this at BFI Southbank"
        >
          6:30pm
        </a>
      </li>
    </ul>
  </div>
  <div
    className="sc-kjoXOD bsTIhq"
  >
    <p
      className="sc-cHGsZl gBsYkR"
    >
      24th February
    </p>
    <ul
      className="sc-TOsTZ thZdb"
    >
      <li
        className="sc-kgAjT fAezwI"
      >
        <span
          className="sc-cJSrbW DqKqv"
        >
          3:30pm
           - Sold out
        </span>
      </li>
      <li
        className="sc-kgAjT fAezwI"
      >
        <span
          className="sc-cJSrbW DqKqv"
        >
          6:30pm
           - Sold out
        </span>
      </li>
    </ul>
  </div>
</section>
`;

exports[`Storyshots 2 All Components/FilmShowingGrid Example With Title 1`] = `
Array [
  <p
    className="sc-eqIVtm jipbPB h3"
  >
    La La Land
  </p>,
  <section
    className="sc-ksYbfQ idWHsL"
  >
    <div
      className="sc-kjoXOD bsTIhq"
    >
      <p
        className="sc-cHGsZl gBsYkR"
      >
        24th February
      </p>
      <ul
        className="sc-TOsTZ thZdb"
      >
        <li
          className="sc-kgAjT fAezwI"
        >
          <a
            className="sc-VigVT dNkdxS"
            colorScheme={0}
            href="#"
            id="10101"
            target="_self"
            time="3:30pm"
            title="Book this at BFI Southbank"
          >
            3:30pm
          </a>
        </li>
        <li
          className="sc-kgAjT fAezwI"
        >
          <a
            className="sc-VigVT dNkdxS"
            colorScheme={0}
            href="#"
            id="202020"
            target="_self"
            time="6:30pm"
            title="Book this at BFI Southbank"
          >
            6:30pm
          </a>
        </li>
        <li
          className="sc-kgAjT fAezwI"
        >
          <span
            className="sc-cJSrbW DqKqv"
          >
            8:45pm
             - Sold out
          </span>
        </li>
      </ul>
    </div>
    <div
      className="sc-kjoXOD bsTIhq"
    >
      <p
        className="sc-cHGsZl gBsYkR"
      >
        24th February
      </p>
      <ul
        className="sc-TOsTZ thZdb"
      >
        <li
          className="sc-kgAjT fAezwI"
        >
          <span
            className="sc-cJSrbW DqKqv"
          >
            3:30pm
             - Sold out
          </span>
        </li>
        <li
          className="sc-kgAjT fAezwI"
        >
          <a
            className="sc-VigVT dNkdxS"
            colorScheme={0}
            href="#"
            id="5050505"
            target="_self"
            time="6:30pm"
            title="Book this at BFI Southbank"
          >
            6:30pm
          </a>
        </li>
      </ul>
    </div>
    <div
      className="sc-kjoXOD bsTIhq"
    >
      <p
        className="sc-cHGsZl gBsYkR"
      >
        24th February
      </p>
      <ul
        className="sc-TOsTZ thZdb"
      >
        <li
          className="sc-kgAjT fAezwI"
        >
          <span
            className="sc-cJSrbW DqKqv"
          >
            3:30pm
             - Sold out
          </span>
        </li>
        <li
          className="sc-kgAjT fAezwI"
        >
          <a
            className="sc-VigVT dNkdxS"
            colorScheme={0}
            href="#"
            id="70707"
            target="_self"
            time="6:30pm"
            title="Book this at BFI Southbank"
          >
            6:30pm
          </a>
        </li>
      </ul>
    </div>
    <div
      className="sc-kjoXOD bsTIhq"
    >
      <p
        className="sc-cHGsZl gBsYkR"
      >
        24th February
      </p>
      <ul
        className="sc-TOsTZ thZdb"
      >
        <li
          className="sc-kgAjT fAezwI"
        >
          <span
            className="sc-cJSrbW DqKqv"
          >
            3:30pm
             - Sold out
          </span>
        </li>
        <li
          className="sc-kgAjT fAezwI"
        >
          <span
            className="sc-cJSrbW DqKqv"
          >
            6:30pm
             - Sold out
          </span>
        </li>
      </ul>
    </div>
  </section>,
]
`;

exports[`Storyshots 2 All Components/Filter-esque Links Normal 1`] = `
<nav
  className="sc-hmzhuo jDAeNT filter_links"
>
  <a
    className="sc-frDJqD hZZEXw"
    disabled={false}
    href="#1"
    title="Show all \\"Example link\\" articles"
  >
    Example link
  </a>
  <a
    className="sc-frDJqD hZZEXw"
    disabled={false}
    href="#2"
    title="Show all \\"Where to stream\\" articles"
  >
    Where to stream
  </a>
  <a
    className="sc-frDJqD hZZEXw"
    disabled={false}
    href="#3"
    title="Show all \\"Where to begin\\" articles"
  >
    Where to begin
  </a>
  <a
    className="sc-frDJqD hZZEXw"
    disabled={false}
    href="#4"
    title="Show all \\"Five Things\\" articles"
  >
    Five Things
  </a>
</nav>
`;

exports[`Storyshots 2 All Components/Filterable Articles Normal 1`] = `
<p>
  Due to this component requiring connection with the front end framework to pull data from the API, it is not possible to display an example of this component within Storybook.
</p>
`;

exports[`Storyshots 2 All Components/Headline Hero H 1 1`] = `
<h1
  className="sc-jhAzac gGHCmk"
>
  My example headline
</h1>
`;

exports[`Storyshots 2 All Components/Headline Level 1 1`] = `
<h1
  className="sc-jhAzac sc-fBuWsC bOQjiW"
>
  My example headline
</h1>
`;

exports[`Storyshots 2 All Components/Headline Level 2 1`] = `
<h2
  className="sc-fMiknA eFQPVV"
>
  My example headline
</h2>
`;

exports[`Storyshots 2 All Components/Headline Level 3 1`] = `
<h3
  className="sc-dVhcbM iHzQjc"
>
  My example headline
</h3>
`;

exports[`Storyshots 2 All Components/Hero Show Normal 1`] = `
Array [
  <a
    className="sc-iQKALj bwXNjF"
    href="#content-start"
  >
    <div
      className="inner"
    >
      <div
        className="button_like"
      >
        Skip to content
      </div>
    </div>
  </a>,
  <header
    className="sc-kPVwWT cbKPWv"
    onMouseLeave={[Function]}
  >
    <div
      className="sc-kfGgVZ gDkaOa"
    >
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-kafWEX bCYNWO"
        onClick={[Function]}
      >
        <div
          className="sc-cIShpX dxOVsg"
          open={false}
        >
          <div />
        </div>
        Menu
      </button>
      <a
        className="sc-eXEjpC jClvJQ"
        href="/"
        target="_self"
      >
        <img
          alt="Home"
          className="sc-esjQYD ipRRwY"
          src="test-file-stub"
        />
      </a>
      <div
        className="sc-ibxdXY jSFOMM"
      />
      <nav
        aria-label="Main"
        className="sc-feJyhm fIDVJf"
        onMouseLeave={[Function]}
        role="navigation"
      >
        <ul
          className="sc-iELTvK VHqMN"
        >
          <a
            className="sc-gxMtzJ bPQDOa"
            href="/"
            target="_self"
          >
            <li
              className="sc-jwKygS kXhQfa"
            >
              <img
                alt="Home"
                className="sc-dfVpRl kicfWV"
                src="test-file-stub"
              />
            </li>
          </a>
          <li
            className="sc-jwKygS kXhQfa"
          >
            <a
              active={true}
              aria-expanded={false}
              aria-haspopup="true"
              className="sc-cmTdod csdvZo"
              data-tracking="header-navigation"
              hovered={false}
              href="/iframe.html?id=pattern-library-page-examples-1-watch-discover--1-landing-page"
              isSticky={true}
              isWhite={false}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              target="_self"
            >
              Watch and Discover
            </a>
            <button
              className="sc-hwwEjo gJMcKb"
              onClick={[Function]}
            >
              Open
               submenu
            </button>
          </li>
          <li
            className="sc-jwKygS kXhQfa"
          >
            <a
              aria-expanded={false}
              aria-haspopup="true"
              className="sc-cmTdod cgUCrV"
              data-tracking="header-navigation"
              hovered={false}
              href="/iframe.html?id=pattern-library-page-examples-2-funding-industry--1-landing-page"
              isSticky={true}
              isWhite={false}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              target="_self"
            >
              Funding and Industry
            </a>
            <button
              className="sc-hwwEjo gJMcKb"
              onClick={[Function]}
            >
              Open
               submenu
            </button>
          </li>
          <li
            className="sc-jwKygS kXhQfa"
          >
            <a
              aria-expanded={false}
              aria-haspopup="true"
              className="sc-cmTdod cgUCrV"
              data-tracking="header-navigation"
              hovered={false}
              href="/iframe.html?id=pattern-library-page-examples-1-watch-discover--1-landing-page"
              isSticky={true}
              isWhite={false}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              target="_self"
            >
              Learning and Training
            </a>
            <button
              className="sc-hwwEjo gJMcKb"
              onClick={[Function]}
            >
              Open
               submenu
            </button>
          </li>
        </ul>
      </nav>
      <div
        className="sc-kvZOFW dJeEas"
      >
        <a
          className="sc-hqyNC ejHKFP"
          href="/"
          isSticky={true}
          isTransparent={false}
          target="_self"
        >
          Shop
        </a>
        <a
          className="sc-hqyNC ejHKFP"
          href="/"
          isSticky={true}
          isTransparent={false}
          target="_self"
        >
          Become a member
        </a>
      </div>
    </div>
  </header>,
  <div
    id="content-start"
  />,
]
`;

exports[`Storyshots 2 All Components/Lead paragraph Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <p
    className="sc-bwCtUz lbOyBo lead_paragraph"
    dangerouslySetInnerHTML={
      Object {
        "__html": "We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!",
      }
    }
  />
</div>
`;

exports[`Storyshots 2 All Components/Newsletter Sign Up Example 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-hrWEMg qtVci"
  >
    <p
      className="sc-eqIVtm jipbPB h3"
    >
      Get the latest from the BFI
    </p>
    <p>
      Sign up for BFI news, features, videos and podcasts
    </p>
    <form
      action="https://www.createsend.com/t/subscribeerror?description="
      className="sc-eTuwsz fUJzzk js-cm-form"
      data-id="191722FC90141D02184CB1B62AB3DC26D57AD7AD0DF253BE15DD122C605B740244DFF1ADDEE1A8DA861127EDFD99BF281A7016BD9F175EAF91CB858CC76D303F"
      id="subForm"
      method="post"
    >
      <label
        className="sc-gwVKww jyjofO"
      >
        Email
        <input
          aria-label="Email"
          autoComplete="Email"
          className="js-cm-email-input qa-input-email"
          id="fieldEmail"
          maxLength="200"
          name="cm-ydyddhy-ydyddhy"
          placeholder="Your email..."
          required={true}
          title="Your Email (required)"
          type="email"
        />
      </label>
      <button
        className="sc-hXRMBi fJqnsJ"
        type="submit"
      >
        Sign up
      </button>
    </form>
  </div>
</div>
`;

exports[`Storyshots 2 All Components/Oembed Vimeo 1`] = `
<div
  className="sc-epnACN HbNuO"
>
  <iframe
    allow="autoplay; fullscreen"
    allowFullScreen={true}
    frameBorder="0"
    height="270"
    src="https://player.vimeo.com/video/143029218?app_id=122963"
    title="Film is Fragile - Film needs your help! | BFI Trailer"
    width="480"
  />
</div>
`;

exports[`Storyshots 2 All Components/Oembed Youtube 1`] = `
<div
  className="sc-epnACN HbNuO"
>
  <iframe
    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
    allowFullScreen={true}
    frameBorder="0"
    height="270"
    src="https://www.youtube.com/embed/vpqYxK6mmSU?feature=oembed"
    title="Misbehaviour director Phillipa Lowthorpe and producer Suzanne Mackie | BFI Q&A video"
    width="480"
  />
</div>
`;

exports[`Storyshots 2 All Components/StepByStep Primary 1`] = `
<div
  style={
    Object {
      "maxWidth": "350px",
      "padding": "20px",
    }
  }
>
  <section
    className="sc-bsbRJL goXPtQ"
  >
    <h3
      className="sc-hZSUBg fDeVcq"
    >
      Applying for film funding
    </h3>
    <ol
      className="sc-cMhqgX fousEH"
    >
      <li
        className="sc-iuJeZd kUorTA"
      >
        <button
          aria-expanded="false"
          className="sc-cmthru euFFoJ"
          onClick={[Function]}
        >
          <strong
            className="sc-esOvli ifrfny"
          >
            Is this fund right for you?
          </strong>
          <span
            className="sc-hMFtBS eGsvAN"
          >
            Show
          </span>
        </button>
      </li>
      <li
        className="sc-iuJeZd kUorTA"
      >
        <button
          aria-expanded="false"
          className="sc-cmthru euFFoJ"
          onClick={[Function]}
        >
          <strong
            className="sc-esOvli ifrfny"
          >
            Prepare your supporting materials
          </strong>
          <span
            className="sc-hMFtBS eGsvAN"
          >
            Show
          </span>
        </button>
      </li>
      <li
        className="sc-iuJeZd kUorTA"
      >
        <button
          aria-expanded="false"
          className="sc-cmthru euFFoJ"
          onClick={[Function]}
        >
          <strong
            className="sc-esOvli ifrfny"
          >
            Apply
          </strong>
          <span
            className="sc-hMFtBS eGsvAN"
          >
            Show
          </span>
        </button>
      </li>
      <li
        className="sc-iuJeZd kUorTA"
      >
        <button
          aria-expanded="false"
          className="sc-cmthru euFFoJ"
          onClick={[Function]}
        >
          <strong
            className="sc-esOvli ifrfny"
          >
            Wait to hear from us
          </strong>
          <span
            className="sc-hMFtBS eGsvAN"
          >
            Show
          </span>
        </button>
      </li>
      <li
        className="sc-iuJeZd kUorTA"
      >
        <button
          aria-expanded="false"
          className="sc-cmthru euFFoJ"
          onClick={[Function]}
        >
          <strong
            className="sc-esOvli ifrfny"
          >
            Your decision
          </strong>
          <span
            className="sc-hMFtBS eGsvAN"
          >
            Show
          </span>
        </button>
      </li>
    </ol>
  </section>
</div>
`;

exports[`Storyshots 2 All Components/Tabs Primary 1`] = `
<div
  style={
    Object {
      "maxWidth": "650px",
      "padding": "20px",
    }
  }
>
  <ul
    className="sc-gqPbQI dzrOnA"
    role="tablist"
  >
    <li
      className="sc-hORach gUEVRu"
      role="presentation"
    >
      <button
        aria-selected={true}
        className="sc-bMVAic fnTKDs"
        id="tab1"
        onClick={[Function]}
        role="tab"
      >
        Highlight
      </button>
    </li>
    <li
      className="sc-hORach lmSglb"
      role="presentation"
    >
      <button
        aria-selected={false}
        className="sc-bMVAic emQbcd"
        id="tab2"
        onClick={[Function]}
        role="tab"
      >
        Showing today
      </button>
    </li>
    <li
      className="sc-hORach lmSglb"
      role="presentation"
    >
      <button
        aria-selected={false}
        className="sc-bMVAic emQbcd"
        id="tab3"
        onClick={[Function]}
        role="tab"
      >
        Showing this week
      </button>
    </li>
  </ul>
  <section
    aria-labelledby="tab1"
    hidden={false}
    id="section1"
    role="tabpanel"
  >
    Tab 1 content
  </section>
  <section
    aria-labelledby="tab1"
    hidden={true}
    id="section2"
    role="tabpanel"
  >
    Tab 2 content
  </section>
  <section
    aria-labelledby="tab1"
    hidden={true}
    id="section3"
    role="tabpanel"
  >
    Tab 3 content
  </section>
</div>
`;

exports[`Storyshots 2 All Components/Tag Primary 1`] = `
<div
  className="sc-bAeIUo cLMKbd tag"
>
  Example tag
</div>
`;

exports[`Storyshots 2 All Components/Text Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-gPEVay kAGHuZ text_block"
  >
    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="http://google.com"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    <ol>
      <li>
        What do they got in there? King Kong?
      </li>
      <li>
        You really think you can fly that thing?
      </li>
      <li>
        Must go faster
      </li>
    </ol>
    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="http://google.com"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    <ul>
      <li>
        What do they got in there? King Kong?
      </li>
      <li>
        You really think you can fly that thing?
      </li>
      <li>
        Must go faster
      </li>
    </ul>
  </div>
</div>
`;
